feat(calculator): 문자열에서 숫자 추출 및 합산 기능 구현
사용자가 입력한 문자열에서 숫자를 추출하여 합산하는 기능을 추가
빈 문자열을 입력할 경우 0을 반환